chapter11/lab11.1/tests/require_annotations/pod_with_annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-app-with-annotation
  namespace: default
  annotations:
    corp.org/department: webapps
  labels:
    run: web-app
spec:
  containers:
    - image: nginx:latest
      name: nginx
