chapter11/lab11.1/tests/require_annotations/pod_without_annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-app-without-annotation
  namespace: default
  labels:
    run: web-app
spec:
  containers:
    - image: nginx:latest
      name: nginx
